# Edge-aware-Integrated-Depth-Supervision

./: README.md  pyproject.toml
edge_nerf/: config.py  datamanager.py  dataparser.py  field.py  losses.py  model.py  pipeline.py
nerfstudio-method-template/method_template/: depth_dataset.py  template_config.py  template_data.py  template_datamanager.py  template_dataparser.py  template_dataparser_config.py  template_model.py
